Refactor authentication and dashboard handling for improved clarity and remove unused code